# aoc2024

./: .gitignore  CMakeLists.txt  create_day.sh
.devcontainer/: Dockerfile
2024/: create_day.sh
2024/day01/: CMakeLists.txt  day01.cpp  day01.h  day01_test.cpp
2024/day02/: CMakeLists.txt  day02_test.cpp
2024/day03/: CMakeLists.txt  day03.cpp  day03.h
2024/day04/: CMakeLists.txt
2024/day05/: day05.cpp  day05.h  day05_test.cpp
2024/day06/: CMakeLists.txt  day06.cpp  day06.h  day06_faster.cpp  day06_test.cpp
2024/day07/: CMakeLists.txt  day07.h  day07_test.cpp
2024/day08/: CMakeLists.txt  day08.cpp  day08.h  day08_test.cpp
2024/day09/: CMakeLists.txt
2024/day10/: CMakeLists.txt  day10.cpp  day10_test.cpp
2024/day11/: day11.cpp  day11.h  day11_test.cpp
2024/day12/: day12_test.cpp
2024/day13/: CMakeLists.txt  day13.cpp
2024/day14/: CMakeLists.txt  day14.cpp
2024/day15/: CMakeLists.txt  day15.h  day15_test.cpp  view.sh
2024/day16/: day16.cpp  day16.h  day16_test.cpp
2024/day17/: day17.h  day17_test.cpp
2024/day18/: CMakeLists.txt  day18.cpp  day18.h
2024/day19/: day19.cpp  day19.h
2024/day20/: day20.cpp  day20.h  day20_test.cpp
2024/day21/: day21.h  day21_test.cpp
2024/day22/: day22.cpp  day22_test.cpp
2024/day23/: day23_test.cpp
2024/day24/: CMakeLists.txt  day24.cpp  day24.h  day24_test.cpp
2024/day25/: day25.cpp  day25_test.cpp
2024/lib/: CMakeLists.txt  search.cpp  tree.hpp
2024/perf/: CMakeLists.txt
2025/: .clang-tidy  CMakeLists.txt  CMakePresets.json  create_day.sh
2025/day01/: CMakeLists.txt  day01.c  day01.h  day01_test.cpp
2025/day02/: CMakeLists.txt  day02.c  day02.h  day02_test.cpp
2025/day03/: CMakeLists.txt  day03.c  day03.h  day03_test.cpp
2025/lib/: CMakeLists.txt  debug.c  debug.h  file.c  file.h  string.c  string.h  string_split.c  string_split.h  vector.c  vector.h
day01/: CMakeLists.txt  day01.cpp  day01.h  day01_test.cpp
day02/: CMakeLists.txt  day02.cpp  day02.h  day02_test.cpp
day03/: CMakeLists.txt  day03.cpp  day03.h  day03_test.cpp
day04/: CMakeLists.txt  day04.cpp  day04.h  day04_test.cpp
day05/: CMakeLists.txt  day05.cpp  day05.h  day05_test.cpp
day06/: CMakeLists.txt  day06.cpp  day06.h  day06_test.cpp
day07/: CMakeLists.txt  day07.cpp  day07.h  day07_faster.cpp  day07_test.cpp
day08/: CMakeLists.txt  day08.cpp  day08.h  day08_test.cpp
day09/: CMakeLists.txt  day09.cpp  day09.h  day09_faster.cpp  day09_test.cpp
day1/: CMakeLists.txt  day1.cpp  day1.h  day1_test.cpp
day10/: CMakeLists.txt  day10.cpp  day10.h  day10_test.cpp
day11/: CMakeLists.txt  day11.cpp  day11.h  day11_test.cpp
day12/: CMakeLists.txt  day12.cpp  day12.h  day12_test.cpp
day13/: CMakeLists.txt  day13.cpp  day13.h  day13_test.cpp
day14/: CMakeLists.txt  day14.cpp  day14.h  day14_faster.cpp  day14_test.cpp
day15/: CMakeLists.txt  day15.cpp  day15.h  day15_test.cpp  dodgy time  view.sh
day16/: CMakeLists.txt  day16.cpp  day16.h  day16_test.cpp
day17/: CMakeLists.txt  day17.cpp  day17.h  day17_test.cpp
day18/: CMakeLists.txt  day18.cpp  day18.h  day18_test.cpp
day19/: CMakeLists.txt  day19.cpp  day19.h  day19_test.cpp
day2/: CMakeLists.txt  day2.cpp  day2.h  day2_test.cpp
day20/: CMakeLists.txt  day20.cpp  day20.h  day20_test.cpp
day21/: CMakeLists.txt  day21.cpp  day21.h  day21_test.cpp
day22/: CMakeLists.txt  day22.cpp  day22.h  day22_test.cpp
day23/: CMakeLists.txt  day23.cpp  day23.h  day23_test.cpp
day24/: CMakeLists.txt  day24.cpp  day24.h  day24_test.cpp
day25/: CMakeLists.txt  day25.h  day25_test.cpp
day3/: CMakeLists.txt  day3.cpp  day3.h  day3_test.cpp
day4/: CMakeLists.txt  day4.cpp  day4.h  day4_test.cpp
day5/: CMakeLists.txt  day5.cpp  day5.h  day5_test.cpp
day6/: CMakeLists.txt  day6.cpp  day6.h  day6_test.cpp
day7/: CMakeLists.txt  day7.cpp  day7.h  day7_test.cpp
day8/: CMakeLists.txt  day8.cpp  day8.h  day8_test.cpp
day9/: CMakeLists.txt  day9.cpp  day9.h  day9_test.cpp  example2.txt
lib/: CMakeLists.txt  aoc.cpp  aoc.h  assert.cpp  assert.h  binary_tree.hpp  grid.cpp  grid.h  hash.hpp  puzzle.h  search.cpp  search.h  tree.hpp
perf/: perf_test.cpp
